# cmdsage

./: Cargo.toml  README.md  install.sh
commands/core/: archive.toml  disk.toml  files.toml  network.toml  network_advanced.toml  process.toml  system.toml  text.toml  text_advanced.toml
commands/dev/: build.toml  dev_tools.toml  docker.toml  git.toml  package.toml
commands/platform/: linux.toml  macos.toml  windows.toml
src/: config.rs  history.rs  lib.rs  main.rs
src/engine/: executor.rs  mod.rs  template.rs
src/knowledge/: indexer.rs  loader.rs  mod.rs  platform.rs
src/matcher/: keyword.rs  mod.rs  semantic.rs
src/model/: onnx.rs
src/ui/: preview.rs
