[package]
name = "cmdsage"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Chinese tokenization
jieba-rs = "0.7"

# ONNX Runtime for local embedding model
ort = { version = "2.0.0-rc.9", features = ["download-binaries"] }
ndarray = "0.16"

# HuggingFace tokenizer
tokenizers = "0.21"

# Terminal UI
crossterm = "0.28"
colored = "2"
dialoguer = "0.11"

# Utilities
walkdir = "2"
anyhow = "1"
dirs = "6"
